fixups after initial